# CLImage

./: .gitignore  LICENSE  README.md
.github/workflows/: codeql-analysis.yml
CLImage/: settings.gradle
CLImage/app/: build.gradle  dummyKeystore
CLImage/app/src/androidTest/java/com/glassimaging/climage/: ExampleInstrumentedTest.kt
CLImage/app/src/main/: AndroidManifest.xml
CLImage/app/src/main/assets/: baboon_16.tiff  baboon_16_b.tiff
CLImage/app/src/main/cpp/: CMakeLists.txt  ShaderCompiler.cpp  cl_pipeline.cpp  cl_pipeline.h  climage-test.cpp  demosaic.cpp  demosaic.hpp  main.cpp  raw_pipeline.cpp
CLImage/app/src/main/cpp/OpenCL/: blur.cl  demosaic.cl
CLImage/app/src/main/cpp/filesystem/: filesystem_common.h
CLImage/app/src/main/java/com/glassimaging/climage/: MainActivity.kt
CLImage/app/src/main/res/layout/: activity_main.xml
CLImage/app/src/main/res/values/: strings.xml  themes.xml
CLImage/app/src/main/res/values-night/: themes.xml
CLImage/app/src/test/java/com/glassimaging/climage/: ExampleUnitTest.kt
CLImage/app/util/: compile_shaders.sh
CLImage/gradle/wrapper/: gradle-wrapper.properties
CLImageTest/CLImageTest.xcodeproj/: project.pbxproj
CLImageTest/CLImageTest.xcodeproj/xcshareddata/xcschemes/: CLImageTest.xcscheme  RawPipeline.xcscheme
CLImageTest/CLImageTest/includes/CL/: OpenCL.hpp  opencl.hpp
CLImageTest/CLImageTest/libs/: libtiff.dylib  libtiffxx.dylib
CLImageTest/CLImageTest/libs/arm_64/: libjpeg.dylib  libpng.dylib  libtiff.dylib  libtiffxx.dylib  libz.dylib
CLImageTest/CLImageTest/libs/x86_64/: libjpeg.dylib  libpng.dylib  libtiff.dylib  libz.dylib
OpenCLHeaders/CL/: opencl.hpp
src/: android_support.cpp  android_support.h  cl_error.cpp  cl_error.h  cl_icd_wrapper.cpp  cl_icd_wrapper.h  cl_opencl.hpp  gls_android_support.cpp  gls_android_support.h  gls_cl.cpp  gls_cl.hpp  gls_cl_error.cpp  gls_cl_image.hpp  gls_color_science.cpp  gls_color_science.hpp  gls_dng_lossless_jpeg.hpp  gls_exception.hpp  gls_icd_wrapper.cpp  gls_icd_wrapper.h  gls_image.hpp  gls_image_jpeg.cpp  gls_image_jpeg.h  gls_image_png.cpp  gls_image_png.h  gls_image_tiff.cpp  gls_image_tiff.h  gls_linalg.hpp  gls_logging.cpp  gls_logging.h  gls_opencl.hpp  gls_tiff_metadata.cpp  gls_tiff_metadata.hpp  logging.cpp  logging.h
